# ntiaItmForMatlab

./: .gitignore  CMakeLists.txt  README.md
include/: itm.h  itmprivate.h
matlab_tests/: test_ITM_P2P_TLS_PL.m
src/: ComputeDeltaH.cpp  DiffractionLoss.cpp  FindHorizons.cpp  FreeSpaceLoss.cpp  FresnelIntegral.cpp  H0Function.cpp  InitializeArea.cpp  InitializePointToPoint.cpp  InverseComplementaryCumulativeDistributionFunction.cpp  KnifeEdgeDiffraction.cpp  LineOfSightLoss.cpp  LinearLeastSquaresFit.cpp  LongleyRice.cpp  QuickPfl.cpp  SigmaHFunction.cpp  SmoothEarthDiffraction.cpp  TerrainRoughness.cpp  TroposcatterLoss.cpp  ValidateInputs.cpp  Variability.cpp  itm_area.cpp  itm_p2p.cpp
